Allow to hide plugins, even from ops.